second commit: Added login and register forms

--- a/project_podcast1/pubspec.yaml
+++ b/project_podcast1/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  email_validator: '^3.0.0'
+  # email_validator: '^3.0.0'
 
 dev_dependencies:
   flutter_test:
