--- a/project_podcast1/pubspec.yaml
+++ b/project_podcast1/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # email_validator: '^3.0.0'
-
+  http: ^1.2.2
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -18,3 +18,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/logo.jpg
+    - assets/images/logo.png
+
